namespaces/everywhere/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: everywhere
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: everywhere
  type: LoadBalancer
