namespaces/everywhere/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: everywhere
spec:
  backend:
    serviceName: everywhere
    servicePort: 80
